public enum QuestionStatus {
    OPEN,
    CLOSED
}
