public enum VoteType {
    UPVOTE,
    DOWNVOTE,
}
